--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@ body, html {
 	padding: 0;
 	font-family: 'League Spartan', sans-serif;
 	box-sizing: border-box;
-	scroll-behavior: smooth;
+	/* scroll-behavior: smooth; */
 	background: #191923;
+	/* background: green; */
+
 }
 
 :root {
@@ -21,9 +23,56 @@ body, html {
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-	width: 100%;
-	height: 100%;
+	/* height: 100%; */
  }
+
+ /* Modal */
+ .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.4);
+  backdrop-filter: blur(10px);
+}
+
+/* Modal Content */
+.modal-content {
+  background: linear-gradient(159deg, #2d2d3a 0%, #2b2b35 100%);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+}
+
+.modal-content p {
+	color: var(--semi-black);
+}
+
+.modal-content p span {
+	color: var(--orange);
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 0 10px 10px 0
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 /* Sidebar */
@@ -38,6 +87,43 @@ body, html {
 	border-radius: 10px;
 }
 
+/* Navbar */
+.navbar-brand img {
+	width: 50px;
+}
+
+.navbar-toggler-icon i {
+	color: var(--orange);
+	font-size:28px;
+}
+
+.navbar-toggler-icon i:hover {
+	color: var(--white);
+}
+
+.navbar {
+	background: linear-gradient(160deg, rgba(37, 37, 50, 0.98) 0%, rgba(35, 35, 45, 0.98) 100%);
+}
+
+.navbar-nav {
+	float: right;
+	text-align: right;
+}
+
+.navbar-nav a {
+	color: var(--orange) !important;
+}
+
+.navbar-nav a:hover {
+	color: var(--white) !important;
+}
+
+.__ilovecoding em {
+	color: var(--orange);
+}
+
+
+/* Profile Content */
 .__sidebar {
 	position: fixed;
 	width: 300px;
@@ -45,6 +131,7 @@ body, html {
 	background: #20202a;
 	display: flex;
 	flex-direction: column;
+	margin-top: 70px;
 }
 
 .__profile-header {
@@ -135,13 +222,18 @@ body, html {
 	background: var(--orange);
 }
 
-.progress-bar3, .progress-bar4 {
+.progress-bar3 {
+	width: 65%;
+	background: var(--orange);
+}
+
+.progress-bar4 {
 	width: 60%;
 	background: var(--orange);
 }
 
 .progress-bar5 {
-	width: 50%;
+	width: 70%;
 	background: var(--orange);
 }
 
@@ -188,17 +280,17 @@ body, html {
 .__cv-link i::before {
 	font-size: 0.8rem;
 	margin-left: 5px;
-	margin-bottom: 2px;
 }
 
 .__socials-icon {
-	height: 40px;
+	margin-bottom: 70px;
+	height: 50px;
 	left: 0;
 	background: linear-gradient(159deg, rgba(37, 37, 50, 0.98) 0%, rgba(35, 35, 45, 0.98) 100%);
 }
 
 .__socials-icon ul {
-	padding: 10px 0 0 0 ;
+	padding: 15px 0 0 0 ;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -222,18 +314,10 @@ body, html {
 
 
 /* Right-side Content */
-
-/* .__content {
-	position: relative;
-	left: 290px;
-	margin-left: 20px;
-	height: 100vh;
-	width: calc(100% - 300px);
-	background: green;
-	display: flex;
+.__content {
+	margin-top: 50px;
+	/* width: 100%; */
 }
- */
-
 
 .__banner-img {
 	box-sizing: border-box;
@@ -269,47 +353,25 @@ body, html {
 	color: var(--orange);
 }
 
-/* .__code-script {
-	width: 100%;
+.__code-script {
+	display: flex;
+	position: absolute;
+	color: var(--white);
+	line-height: 1.5;
+	bottom: 45%;
+	left: 5%;
 }
 
-.__static-text {
-	display: inline-block;
+.__code-script span {
+	font-size: 1.1rem;
+}
+
+.__code-script p {
+	font-style: normal;
+	font-size: 1.1rem;
 	color: var(--orange);
 }
 
-.__dynamic-text {
-	display: inline-block;
-}
-
-.__dynamic-text span {
-	position: relative;
-}
-
-.__dynamic-text span::after {
-	content: "";
-	position: absolute;
-	left: 0;
-	right: -2px;
-	height: 100%;
-	border-left: 2px solid var(--orange);
-	animation: 3s typing;
-	animation-iteration-count: infinite;
-	animation-timing-function: steps(10);
-	animation-fill-mode: backwards;
-}
-
-@keyframes typing {
-	0% {
-		left: 0;
-	}
-	50% {
-		left: 100%;
-	}
-	100% {
-		left: 0;
-	}
-} */
 
 .__explore-btn {
 	position: absolute;
@@ -394,6 +456,9 @@ body, html {
 }
 
 .__flip-card-front {
+	padding: 10px;
+	width: 100%;
+	max-height: 100%;
   background: linear-gradient(159deg, #2d2d3a 0%, #2b2b35 100%);
 }
 
@@ -429,17 +494,12 @@ body, html {
 	margin: 20px;
 }
 
-.__services h1 {
-	margin-bottom: 15px;
-}
-
 .__services-box {
 	background: linear-gradient(159deg, #2d2d3a 0%, #2b2b35 100%);
-	padding: 0 15px 15px;
+	padding: 10px;
 	margin-top: 20px;
 	width: 100%;
- /*  height: 100%; */
-	height: 150px;
+	height: 100%;
 	border-top-right-radius: 50px;
 	border-bottom-left-radius: 50px;
 }
@@ -476,14 +536,68 @@ body, html {
 	color: var(--white);
 }
 
+/* Contact */
+
+.__contact {
+	margin: 20px;
+	color: var(--white);
+}
+
+.__contact-icons {
+	padding: 10px;
+	font-size: 40px;
+	color: var(--white);
+}
+
+.__contact-info {
+	color: var(--semi-black);
+}
+
+.__contact-btn {
+	padding: 10px 25px 10px 25px;
+	margin: auto;
+	border-radius: 30px;
+	border: 1px solid var(--white);
+	background: var(--orange);
+}
+
+.__contact-btn::focus {
+	box-shadow: none !important;
+}
+
+.__contact-btn:hover {
+	border: 2px solid var(--black) !important;
+	background: linear-gradient(159deg, #2d2d3a 0%, #2b2b35 100%);
+	transition: 0.6s;
+}
+
+.__contact-btn a {
+	text-decoration: none;
+	color: var(--white);
+}
+
+.__contact-btn a:hover {
+	text-decoration: none;
+	color: var(--orange);
+}
+
+.__footer-content {
+	height: 50px;
+	margin: 20px 20px 0 20px;
+  background: linear-gradient(159deg, #2d2d3a 0%, #2b2b35 100%);
+  
+}
+
+.__footer-content p {
+	padding: 15px 0 0 15px ;
+	color: var(--semi-black);
+	font-size: .9rem;
+}
 
 
 
-@media (max-width: 1200px) {
- /* 	.__sidebar {
- 		display: block;
- } */
 
+@media (min-width: 993px) and  (max-width: 1200px) {
 
 }
 
@@ -491,25 +605,33 @@ body, html {
 
 }
 
-@media (max-width: 768px) {
+@media (min-width: 577px) and (max-width: 768px) {
+	.__banner-title h1 {
+		font-size: 2.1rem;
+	}
 
 }
 
-@media (min-width: 200px) and (max-width: 576px) {
-		.__banner-title {
-			bottom: 55%;
-	}
+@media (max-width: 576px) {
+.__banner-title {
+	bottom: 55%;
+}
 
-	.__banner-title h1 {
-			font-size: 2.5rem;
-	}
+.__banner-title h1 {
+	font-size: 2.1rem;
+}
 
-		.__flip-card {
-		  height: 150px;
-	}
+.__flip-card {
+ 	height: 150px;
+}
 
-	.__flip-card-back {
-	 	padding-top: 65px;
-	}
+.__flip-card-back {
+ 	padding-top: 65px;
+}
+
+.__code-script {
+	flex-wrap: wrap; 
+}
+
 
 }
